err/s01.client.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/s01'...
Listing './lib/python3.5/site-packages/s01/client'...
Listing './lib/python3.5/site-packages/s01.client-0.5.0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/z3c'...
Listing './lib/python3.5/site-packages/z3c/json'...
Compiling './lib/python3.5/site-packages/z3c/json/converter.py'...
***   File "./lib/python3.5/site-packages/z3c/json/converter.py", line 54
    except minjson.ReadException, e:
                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/z3c/json/minjson.py'...
***   File "./lib/python3.5/site-packages/z3c/json/minjson.py", line 197
    def readTokens(self,type, token, (srow, scol), (erow, ecol), line):
                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/z3c/json/proxy.py'...
***   File "./lib/python3.5/site-packages/z3c/json/proxy.py", line 90
    except socket.error, msg:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/z3c/json/tests.py'...
***   File "./lib/python3.5/site-packages/z3c/json/tests.py", line 71
    s = 1L
         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/z3c/json/transport.py'...
***   File "./lib/python3.5/site-packages/z3c/json/transport.py", line 195
    print "body:", repr(response)
                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/z3c.json-0.5.5.egg-info'...
Listing './lib/python3.5/site-packages/zope'...
Listing './lib/python3.5/site-packages/zope/component'...
Listing './lib/python3.5/site-packages/zope/component/testfiles'...
Listing './lib/python3.5/site-packages/zope/component/tests'...
Listing './lib/python3.5/site-packages/zope/event'...
Listing './lib/python3.5/site-packages/zope/interface'...
Listing './lib/python3.5/site-packages/zope/interface/common'...
Listing './lib/python3.5/site-packages/zope/interface/common/tests'...
Listing './lib/python3.5/site-packages/zope/interface/tests'...
Listing './lib/python3.5/site-packages/zope.component-4.4.1.dist-info'...
Listing './lib/python3.5/site-packages/zope.event-4.3.0.dist-info'...
Listing './lib/python3.5/site-packages/zope.interface-4.4.3.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
